# django-admin-refresh

./: .editorconfig  .eslintrc  .pre-commit-config.yaml  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
admin_refresh/: apps.py
admin_refresh/static/admin/css/: base.css  dashboard.css  nav_sidebar.css
admin_refresh/static/admin/js/: nav_sidebar.js
admin_refresh/static/admin/js/admin/: RelatedObjectLookups.js
admin_refresh/templates/admin/: app_list.html  base.html  base_site.html  index.html  login.html  nav_sidebar.html
admin_refresh/templates/admin_doc/: index.html  model_detail.html
admin_refresh/templates/registration/: logged_out.html
requirements/: dev.txt
