[metadata]
name = django-admin-refresh
version = 0.1
description = A refresh of the Django admin interface
long_description = file: README.rst
url = https://github.com/knyghty/django-admin-refresh
author = Tom Carrick
author_email = tom@carrick.eu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django
